--- a/assets/style-2.css
+++ b/assets/style-2.css
@@ -37,13 +37,17 @@ a:hover {
     border-left: 1px solid #ddd;
 }
 
+.fixed-posi .fa {
+    width: 1.5em;
+}
+
 .menulink:hover {
     color: #111;
 }
 
 .profilepic {
     width: 150px;
-    border-radius: 40%;
+    border-radius: 50%;
     /* filter: grayscale(100%); */
 }
 
@@ -67,7 +71,7 @@ a:hover {
 
     .profilepic {
         width: 90px;
-        border-radius: 40%;
+        border-radius: 50%;
         padding-top: 0px !important;
         padding-bottom: 0px !important;
         /* filter: grayscale(100%); */
